[gd_scene load_steps=6 format=2]

[ext_resource path="res://Balsamiq_Sans/BalsamiqSans-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://PrepStation/HUD.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 976.0
margin_top = 25.0
margin_right = 1246.0
margin_bottom = 175.0
custom_fonts/font = SubResource( 1 )
text = "100"
align = 1
valign = 1

[node name="TimeLabel" type="Label" parent="."]
margin_left = 28.0
margin_top = 18.0
margin_right = 298.0
margin_bottom = 168.0
custom_fonts/font = SubResource( 2 )
text = "60"
align = 1
valign = 1

[node name="Message" type="Label" parent="."]
visible = false
margin_left = 310.0
margin_top = 164.0
margin_right = 1010.0
margin_bottom = 664.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "MESSAGE"
align = 1
valign = 2

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="GameTimer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true
autostart = true

[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
